--- a/views/pizza.html
+++ b/views/pizza.html
@@ -36,6 +36,7 @@
     </div>
     <div id="callToAction" class="row">
       <div class="col-md-4">
+      <!--optimized image-->
         <img src="images/pizzeria.jpg" class="img-responsive"> <!-- Image credit to: http://commons.wikimedia.org/wiki/File:HK_TST_night_%E5%98%89%E8%98%AD%E9%81%93_Granville_Road_restaurant_Paisano's_Pizzeria_pizza_Dec-2013.JPG -->
       </div>
       <div class="col-md-8">
@@ -121,6 +122,7 @@
           </div>
           <div id="pizza1" class="randomPizzaContainer" style="width:33.33%; height: 325px;">
             <div style="width:35%">
+            <!--optimized image-->
               <img src="images/pizza.png" class="img-responsive">
             </div>
             <div style="width:65%">
